changed to testing

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -60,4 +60,4 @@ jobs:
       with:
         args: >
             -Dsonar.organization=saidinkar
-            -Dsonar.projectKey=saidinkar-sonar
+            -Dsonar.projectKey=saidinkar
