--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
         matrix:
-            python-version: [3.x]
+            python-version: ["3.10"]
 
     steps:
     #Code checkout and python setup
